traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  ports:
  - name: admin
    port: 8080
    targetPort: admin
  selector:
    k8s-app: traefik-ingress-lb
