traefik/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/secure-backends: "false"
    ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  rules:
  - host: traefik.p.cns.me
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: admin
